# libTermColor

./: .gitignore  Cargo.toml  Makefile  README.md  libtermcolor.h  main
example/: Cargo.toml  main.cpp  main.rs
output/: main
src/: libtermcolor.rs
